partial issue #262 : thoughts.js modified to textarea rather than inputs, removed extra inputs. Having previously made more space on mobile formatting have not stacked inputs as described in comment

--- a/SWEET/static/css/fillin.css
+++ b/SWEET/static/css/fillin.css
@@ -59,8 +59,8 @@
     align-items: center;
 }
 
-.thoughts-box form input[type='text'] {
-    flex-basis: 42%;
+.thoughts-box form textarea {
+    flex-basis: 47%;
     min-width: 0;
     padding: 0.5em;
     margin: 0.5em;
